<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SeteDias">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sete_buss" />

    <Button
        android:id="@+id/button7"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="segSete"
        android:text="@string/segunda_a_sexta"
        android:textColor="@color/white"
        android:textStyle="bold|italic"
        app:backgroundTint="@color/design_default_color_error"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="sabSete"
        android:text="@string/s_bado"
        android:textColor="@color/white"
        android:textStyle="bold|italic"
        app:backgroundTint="@color/design_default_color_error"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button9"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="domSete"
        android:text="@string/domingo"
        android:textColor="@color/white"
        android:textStyle="bold|italic"
        app:backgroundTint="@color/design_default_color_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

</androidx.constraintlayout.widget.ConstraintLayout>