<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F3F3"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button14"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="84dp"
        android:fontFamily="@font/audiowide"
        android:gravity="center"
        android:text="@string/sugest_es_e_reclama_es"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:textStyle="italic"
        app:backgroundTint="@color/yellow"
        app:elevation="5dp"
        app:icon="@android:drawable/sym_action_chat"
        app:iconGravity="textTop"
        app:iconPadding="12dp"
        app:iconSize="30dp"
        app:iconTint="@color/black"
        app:iconTintMode="src_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="37dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="375dp" />

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center|center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button14">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="160dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/Leopoldense"
            android:onClick="trocarTela1"
            android:textAlignment="textEnd"
            app:srcCompat="@drawable/logo_leopoldense" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="160dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:onClick="trocarTela2"
            android:textAlignment="textEnd"
            app:srcCompat="@drawable/logo_feitoria"
            android:contentDescription="@string/Feitoria" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginBottom="24dp"
        android:gravity="center|center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/Leopoldense"
            android:onClick="trocarTela3"
            android:textAlignment="textEnd"
            app:srcCompat="@drawable/logo_sete" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/Leopoldense"
            android:onClick="trocarTela4"
            android:textAlignment="textEnd"
            app:srcCompat="@drawable/logo_sinoscap" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>